# ChangeLog for dev-ruby/rvideo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Sep 2012; Hans de Graaff <graaff@gentoo.org> rvideo-0.9.3-r2.ebuild:
  Add ruby19 keyword.

*rvideo-0.9.3-r2 (20 Mar 2012)

  20 Mar 2012; Hans de Graaff <graaff@gentoo.org> +rvideo-0.9.3-r2.ebuild,
  +files/rvideo-ffmpeg.patch:
  Apply patch to work with newer versions of ffmpeg that have slightly changed
  output.

  14 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  -rvideo-0.9.3.20110614.ebuild:
  Remove again since it isn't backward compatible and overall broken.

*rvideo-0.9.3.20110614 (14 Oct 2011)

  14 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  +rvideo-0.9.3.20110614.ebuild:
  Version bump from a fork with support for ruby 1.9 and recent versions of
  ffmpeg.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> rvideo-0.9.3-r1.ebuild:
  Keyword ~x86-macos.

  03 Sep 2010; Hans de Graaff <graaff@gentoo.org> -rvideo-0.9.3.ebuild:
  Remove old version.

*rvideo-0.9.3-r1 (18 Aug 2010)

  18 Aug 2010; Hans de Graaff <graaff@gentoo.org> +rvideo-0.9.3-r1.ebuild:
  Convert to ruby-fakegem.

  27 Dec 2009; Hans de Graaff <graaff@gentoo.org> rvideo-0.9.3.ebuild,
  +metadata.xml:
  Fix QA issues.
