@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rvideo
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  27 Jun 2014; Hans de Graaff <graaff@gentoo.org> -rvideo-0.9.3-r1.ebuild:
+  Cleanup.
 
   24 Sep 2012; Hans de Graaff <graaff@gentoo.org> rvideo-0.9.3-r2.ebuild:
   Add ruby19 keyword.
